err/italianskin.tool.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/italianskin'...
Listing './lib/python3.5/site-packages/italianskin/tool'...
Listing './lib/python3.5/site-packages/italianskin/tool/browser'...
Listing './lib/python3.5/site-packages/italianskin/tool/content'...
Listing './lib/python3.5/site-packages/italianskin/tool/locales'...
Listing './lib/python3.5/site-packages/italianskin/tool/locales/it'...
Listing './lib/python3.5/site-packages/italianskin/tool/locales/it/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/italianskin/tool/profiles'...
Listing './lib/python3.5/site-packages/italianskin/tool/profiles/default'...
Listing './lib/python3.5/site-packages/italianskin/tool/profiles/default/types'...
Listing './lib/python3.5/site-packages/italianskin/tool/skins'...
Listing './lib/python3.5/site-packages/italianskin/tool/skins/is_tool_images'...
Listing './lib/python3.5/site-packages/italianskin/tool/skins/is_tool_styles'...
Listing './lib/python3.5/site-packages/italianskin/tool/skins/is_tool_templates'...
Compiling './lib/python3.5/site-packages/italianskin/tool/skins/is_tool_templates/change_style.py'...
***   File "./lib/python3.5/site-packages/italianskin/tool/skins/is_tool_templates/change_style.py", line 13
    return response.redirect(request.HTTP_REFERER)
                                                 ^
SyntaxError: 'return' outside function

Listing './lib/python3.5/site-packages/italianskin/tool/utils'...
Listing './lib/python3.5/site-packages/italianskin.tool-3.1.7.post1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
